--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content">
 
         <EditText
-            android:id="@+id/editTextSlicesPerPizza"
+            android:id="@+id/slices_per_pizza"
             android:inputType="numberDecimal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content">
 
         <EditText
-            android:id="@+id/editTextSlicesPerPerson"
+            android:id="@+id/slices_per_person"
             android:inputType="numberDecimal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -49,11 +49,18 @@
     </LinearLayout>
 
     <GridView
-        android:id="@+id/gridView"
+        android:id="@+id/grid_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:numColumns="auto_fit"
         android:stretchMode="columnWidth">
     </GridView>
+
+    <Button
+        android:id="@+id/add_pizza"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/add_pizza"/>
 
 </LinearLayout>
