--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
 
         <EditText
             android:id="@+id/slices_per_pizza"
-            android:inputType="numberDecimal"
+            android:inputType="number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="8"/>
@@ -35,7 +35,7 @@
 
         <EditText
             android:id="@+id/slices_per_person"
-            android:inputType="numberDecimal"
+            android:inputType="number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2"/>
