--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content">
 
         <EditText
-            android:id="@+id/slices_per_pizza"
+            android:id="@+id/text_slices_per_pizza"
             android:inputType="number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content">
 
         <EditText
-            android:id="@+id/slices_per_person"
+            android:id="@+id/text_slices_per_person"
             android:inputType="number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -49,7 +49,7 @@
     </LinearLayout>
 
     <GridView
-        android:id="@+id/grid_view"
+        android:id="@+id/view_grid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:numColumns="auto_fit"
@@ -57,7 +57,7 @@
     </GridView>
 
     <Button
-        android:id="@+id/add_pizza"
+        android:id="@+id/button_add_pizza"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
