--- a/app/src/main/res/layout/dialog_add_pizza.xml
+++ b/app/src/main/res/layout/dialog_add_pizza.xml
@@ -9,13 +9,13 @@
         android:id="@+id/add_pizza_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Pizza"/>
+        android:hint="Cheese"/>
 
     <EditText
-        android:id="@+id/add_pizza_number"
+        android:id="@+id/add_num_people"
         android:inputType="number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="1"/>
+        android:hint="3"/>
 
 </LinearLayout>
