--- a/app/src/main/res/layout/item_grid.xml
+++ b/app/src/main/res/layout/item_grid.xml
@@ -11,12 +11,12 @@
         android:layout_height="wrap_content"/>
 
     <TextView
-        android:id="@+id/people"
+        android:id="@+id/num_people"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <TextView
-        android:id="@+id/fraction"
+        android:id="@+id/num_pizzas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
