--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/slices_per_pizza"
+            android:text="Slices per Pizza"
             android:textSize="17dp"/>
 
     </LinearLayout>
@@ -45,7 +45,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/slices_per_person"
+            android:text="Slices per Person"
             android:textSize="17dp"/>
 
     </LinearLayout>
@@ -63,6 +63,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="@string/add_pizza"/>
+        android:text="Add Pizza"/>
 
 </LinearLayout>
