--- a/app/src/main/res/layout/dialog_delete_pizza.xml
+++ b/app/src/main/res/layout/dialog_delete_pizza.xml
@@ -8,6 +8,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Are you sure you want to delete this pizza?"/>
+        android:layout_margin="20dp"
+        android:text="Are you sure you want to delete this pizza?"
+        android:textSize="18sp"/>
 
 </LinearLayout>
