--- a/app/src/main/res/layout/dialog_edit_pizza.xml
+++ b/app/src/main/res/layout/dialog_edit_pizza.xml
@@ -9,6 +9,10 @@
         android:id="@+id/edit_pizza_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="4dp"
         android:hint="Pizza Name"/>
 
     <EditText
@@ -16,6 +20,10 @@
         android:inputType="number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="16dp"
         android:hint="Number of People"/>
 
 </LinearLayout>
