--- a/app/src/main/res/layout/dialog_number_picker.xml
+++ b/app/src/main/res/layout/dialog_number_picker.xml
@@ -9,6 +9,6 @@
         android:id="@+id/number_picker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"></NumberPicker>
+        android:layout_gravity="center_horizontal"></NumberPicker>
 
 </LinearLayout>
